<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lets Cook</string>
    <string name="error_complete_fields">Por favor completa todos los campos</string>
    <string name="recipe_uploaded">Receta subida exitosamente!</string>
    <string name="error_minimum_length">La contraseña debe tener al menos 8 caracteres</string>
    <string name="error_alphanumeric">La contraseña solo puede contener caracteres alfanuméricos</string>
    <string name="registration_success">Registro exitoso</string>
    <string name="registration_error">Error al registrar: %1$s</string>
    <string name="login_success">Inicio de sesión exitoso</string>
    <string name="login_error">Usuario o contraseña incorrectos</string>
    <string name="login_failed">Usuario o contraseña incorrectos</string>
    <string name="button_exit">Salir</string>
    <string name="button_login">Ingresar</string>
    <string name="button_register">Registrarse</string>
    <string name="label_username">Usuario:</string>
    <string name="label_password">Contraseña:</string>
    <string name="title_login">Iniciar Sesión</string>
    <string name="title_register">Registrarse</string>
    <string name="label_name">Nombre:</string>
    <string name="label_email">Email:</string>
    <string name="register_username_hint">Usuario</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Contraseña</string>
    <string name="button_back">Regresar</string>
    <string name="login_username_hint">Usuario</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="login_success_admin">Inicio de sesión exitoso como admin</string>
    <string name="title_categories">Categorías</string>
    <string name="category_low_calories">Bajo en calorías</string>
    <string name="category_high_protein">Alto en proteínas</string>
    <string name="category_rich_in_fiber">Rico en fibra</string>
    <string name="category_gluten_free">Sin gluten</string>
    <string name="category_low_carb">Bajo en carbohidratos</string>
    <string name="category_vegan">Vegano</string>
    <string name="category_low_sodium">Bajo en sodio</string>
    <string name="category_high_antioxidants">Alto en antioxidantes</string>
    <string name="title_recipe_details">Detalles de la Receta</string>
    <string name="recipe_name">Tortilla de Papa</string>
    <string name="recipe_description">La tortilla de patatas, tortilla de papas​o tortilla española es una tortilla u omelet ​ a la que se le agrega patatas troceadas.​ Se trata de uno de los platos más conocidos y emblemáticos de la cocina española, siendo un producto muy popular que se puede encontrar en casi cualquier bar o restaurante del país.​</string>
    <string name="ingredients_title">Ingredientes</string>
    <string name="ingredients_list">• Papa blanca 400 g\n• Huevos, 4\n• Cebolla, 1 mediana\n• Sal fina, 1 cucharadita\n• Pimienta recién molida, a gusto\n• Aceite de oliva, 100 cc</string>
    <string name="back_button_description">Botón de retroceso</string>
    <string name="edit_profile_title">Editar Perfil</string>
    <string name="full_name_label">Nombre Completo:</string>
    <string name="email_label">Correo Electrónico:</string>
    <string name="email_hint">Correo Electrónico</string>
    <string name="full_name_hint">Nombre Completo</string>
    <string name="update_profile">Actualizar Perfil</string>
    <string name="welcome_text">¡Bienvenido a</string>
    <string name="search_hint">Busca lo que necesites</string>
    <string name="highlights_title">Destacados</string>
    <string name="inspect_recipes_title">¡Inspecciona recetas!</string>
    <string name="find_your_dish_text">¡Encuentra tu plato!</string>
    <string name="meat">Carnes</string>
    <string name="titulo_categorias">Listado de Recetas</string>
    <string name="tortilla_de_papa">Tortilla de Papa</string>
    <string name="higado_encebollado">Hígado Encebollado</string>
    <string name="pollo_al_horno">Pollo al Horno</string>
    <string name="cerdo_con_mostaza">Cerdo con mostaza y miel</string>
    <string name="ensalada_de_atun">Ensalada de atún</string>
    <string name="perfil_usuario">Perfil del Usuario</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="nombre_usuario">Juan Pérez</string>
    <string name="email_usuario">juan.perez@example.com</string>
    <string name="subir_receta">Subir Receta</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="soporte">Soporte</string>
    <string name="logout">Cerrar sesión</string>
    <string name="footer_text">© 2024 LetsCook. Todos los derechos reservados.</string>
    <string name="imagen_receta">Imagen de la receta</string>
    <string name="seleccionar_imagen">Seleccionar Imagen</string>
    <string name="nombre_receta">Nombre de la receta</string>
    <string name="ingresa_nombre_receta">Ingresa el nombre de la receta</string>
    <string name="descripcion">Descripción</string>
    <string name="ingresa_descripcion">Ingresa la descripción</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="ingresa_ingredientes">Ingresa los ingredientes</string>
    <string name="subir_receta_btn">Subir Receta</string>
</resources>
