<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f3e5"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/btnBackPerfil"
        android:layout_width="65dp"
        android:layout_height="35dp"
        android:layout_marginStart="-170dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/button_back"
        android:src="@drawable/back_buttons_multimedia_svgrepo_com" />

    <TextView
        style="@style/ProfileHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/perfil_usuario"
        android:textColor="#000000"
        android:textSize="30sp" />

    <LinearLayout
        style="@style/ProfileBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@android:color/white"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <FrameLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center">

            <!-- Fondo circular -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/circular_background" />

            <!-- Imagen del perfil -->
            <ImageView
                android:id="@+id/profiles_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/image_null"
                android:scaleType="centerCrop"
                android:clipToOutline="true" />
        </FrameLayout>

        <TextView
            android:id="@+id/edit_perfil"
            style="@style/EditProfileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#eeeeee"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/editar_perfil"
            android:textColor="#2196f3"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/name"
            style="@style/NameEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#eeeeee"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/nombre_usuario"
            android:textColor="#1c274c"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/email"
            style="@style/NameEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#eeeeee"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/email_usuario"
            android:textColor="#1c274c"
            android:textSize="20sp" />

        <Button
            android:id="@+id/upload_recipe"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/subir_receta" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/cambiar_contrasena" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/soporte" />

        <Button
            android:id="@+id/logout"
            style="@style/LogoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/logout" />
    </LinearLayout>

    <TextView
        style="@style/FooterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:text="@string/footer_text"
        android:textColor="#777"
        android:textSize="14sp" />
</LinearLayout>
