<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#e0e0e0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="65dp"
            android:layout_height="35dp"
            android:src="@drawable/back_buttons_multimedia_svgrepo_com"
            android:contentDescription="@string/button_back"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/tituloReceta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_recipe_details"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#000000"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imagenReceta"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/tortilla_de_papa"
        android:contentDescription="Imagen de la receta"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/nombrePlato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_name"
        android:textSize="22sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/descripcionReceta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_description"
        android:textColor="#000000"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tituloIngredientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textoIngredientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredients_list"
        android:textColor="#000000"
        android:layout_marginBottom="16dp"
        android:background="#f0f0f0"
        android:padding="8dp"/>

</LinearLayout>
