<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4b4b4b">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/btRegister"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_cornersbt"
            android:text="@string/button_register"
            android:textColor="#fff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:padding="40dp"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:elevation="10dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_login"
                android:textSize="40sp"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:layout_marginBottom="60dp"
                android:textAlignment="center"
                android:shadowColor="#80000000"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_username"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="4dp"
                android:layout_gravity="start"/>

            <EditText
                android:id="@+id/inUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textColor="#000000"
                android:background="@drawable/edit_text_background"
                android:layout_marginTop="5dp"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_password"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:layout_gravity="start" />

            <EditText
                android:id="@+id/inContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textColor="#000000"
                android:background="@drawable/edit_text_background"
                android:layout_marginTop="5dp"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/btExit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/button_exit"
                    android:background="@drawable/rounded_cornersbt"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/btLogin"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/button_login"
                    android:background="@drawable/rounded_cornersbt"
                    android:textColor="#fff"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>