<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#e0e0e0">

    <!-- Contenedor para el botón de retroceso y el título -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start|center_vertical"
        android:layout_marginBottom="32dp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="65dp"
            android:layout_height="35dp"
            android:src="@drawable/back_buttons_multimedia_svgrepo_com"
            android:contentDescription="@string/button_back" />

        <TextView
            android:id="@+id/tituloCategorias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_categories"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"/>
    </LinearLayout>

    <!-- Contenedor para las imágenes y nombres de recetas -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="4"
        android:layout_gravity="center">

        <!-- Ejemplo de ítem 1 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="115dp"
                android:scaleType="centerCrop"
                android:src="@drawable/baja_calorias"
                android:contentDescription="@string/category_low_calories"
                android:background="@drawable/circular_background"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_low_calories"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:textColor="#000000"/>

        </LinearLayout>

        <!-- Ejemplo de ítem 2 -->
        <LinearLayout
            android:id="@+id/itemAltoProteinas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/image_alto_proteina"
                android:layout_width="180dp"
                android:layout_height="115dp"
                android:scaleType="centerCrop"
                android:src="@drawable/altoproteinas"
                android:contentDescription="@string/category_high_protein"
                android:background="@drawable/circular_background"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_high_protein"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:textColor="#000000"/>

        </LinearLayout>

        <!-- Ejemplo de ítem 3 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/alto_fibras"
                android:contentDescription="@string/category_rich_in_fiber"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_rich_in_fiber"
                android:gravity="center"
                android:textColor="#000000"/>

        </LinearLayout>

        <!-- Ejemplo de ítem 4 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/sin_gluten"
                android:contentDescription="@string/category_gluten_free"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_gluten_free"
                android:gravity="center"
                android:textColor="#000000"/>

        </LinearLayout>

        <!-- Ejemplo de ítem 5 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/bajo_carbo"
                android:contentDescription="@string/category_low_carb"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_low_carb"
                android:gravity="center"
                android:textColor="#000000"/>

        </LinearLayout>

        <!-- Ejemplo de ítem 6 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/vegano"
                android:contentDescription="@string/category_vegan"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_vegan"
                android:gravity="center"
                android:textColor="#000000"/>

        </LinearLayout>

        <!-- Ejemplo de ítem 7 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/bajo_sodio"
                android:contentDescription="@string/category_low_sodium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_low_sodium"
                android:gravity="center"
                android:textColor="#000000"/>

        </LinearLayout>

        <!-- Ejemplo de ítem 8 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/alto_antioxidante"
                android:contentDescription="@string/category_high_antioxidants"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_high_antioxidants"
                android:gravity="center"
                android:textColor="#000000"/>

        </LinearLayout>

    </GridLayout>

</LinearLayout>
